--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                   class="icon"
                 />
                 <div>
-                    <h3>Git</h3>
+                    <h3>GitHub</h3>
                     <p>Beginner</p>
                   </div>
                 </article>
